<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.womensafetyapp.OptionsActivity" >

    <TextView
        android:id="@+id/messagesent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/options"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/btnfakepolicesieren"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messagesent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:background="#f00"
        android:text="@string/fakepolicesieren" />

    <Button
        android:id="@+id/btntorch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnfakepolicesieren"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:background="#f00"
        android:text="@string/torch" />

    <Button
        android:id="@+id/btnbatterystatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btntorch"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:background="#f00"
        android:text="@string/batterystatus" />

    <Button
        android:id="@+id/btnsafetytips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_below="@+id/btnbatterystatus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:background="#f00"
        android:text="@string/safetytips" />

</RelativeLayout>
