<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.womensafetyapp.MainActivity" >

     <TextView
         android:id="@+id/welcomemsg"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:text="@string/womensafety"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#ff3666" />

     

     <Button
         android:id="@+id/gotooptions"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/welcomemsg"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="@string/options" />
     <Button
         android:id="@+id/addcontacts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/gotooptions"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:text="@string/addcontacts" />

     <ImageButton
         android:id="@+id/presshere"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/addcontacts"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:src="@drawable/logo" />

     
     
     <TextView
         android:id="@+id/gpslocation"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/presshere"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="10dp"
         android:text="@string/gpslocation"
         android:textColor="#ff0000"
         android:textSize="@dimen/abc_text_size_title_material" />

</RelativeLayout>
