<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.womensafetyapp.SecondMainActivity" >

    <EditText
        android:id="@+id/phonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:ems="10"
        android:inputType="phone" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/addphonenumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phonenumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/add" />
    
    <Button
        android:id="@+id/gotonumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/addphonenumber"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/shownumbers" />

    

    <Button
        android:id="@+id/clearnumbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gotonumbers"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/clearnumbers" />

</RelativeLayout>